--- a/liveness-probe.yaml
+++ b/liveness-probe.yaml
@@ -1,26 +1,23 @@
-apiVersion: 2019-12-01
-location: eastus
+
+apiVersion: 2022-06-17
+location: 'france central'
 name: livenesstest
 properties:
   containers:
-  - name: mycontainer
+  - name: 20180532
     properties:
-      image: 
-      ports: []
+      image: efreidevops.azurecr.io/20210245:v1
       resources:
         requests:
           cpu: 1.0
           memoryInGB: 1.5
       livenessProbe:
         httpGet:
-          path: /healthz
-          port: 80
-          httpHeaders:
-          - name: Custom-Header
-            value: Awesome
-        initialDelaySeconds: 3
-        periodSeconds: 3
+          path: /health
+        periodSeconds: 5
   osType: Linux
   restartPolicy: Always
+  ipAddress:
+    type: Public
 tags: null
 type: Microsoft.ContainerInstance/containerGroups
